--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mi primera web</title>
   </head>
   <body>
-    <h1>¡Hola, soy Alberto!</h1>
+    <h1>¡Hola MUNDO!</h1>
     <p>Bienvenido a mi primera página web hecha con GitHub Pages 🚀</p>
   </body>
 </html>
