--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Mi primera web</title>
-  </head>
-  <body>
-    <h1>¡Hola MUNDO!</h1>
-    <p>Bienvenido a mi primera página web hecha con GitHub Pages 🚀</p>
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio de Alberto Noland</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Alberto Noland Delgado</h1>
+    <p>Estudiante de Ingeniería Robótica 🤖</p>
+    <nav>
+      <a href="#sobre-mi">Sobre mí</a>
+      <a href="#proyectos">Proyectos</a>
+      <a href="#contacto">Contacto</a>
+    </nav>
+  </header>
+
+  <section id="sobre-mi">
+    <h2>Sobre mí</h2>
+    <p>Hola, soy Alberto 👋. Me apasiona la visión por computador, la robótica y la inteligencia artificial. Aquí puedes ver algunos de mis proyectos y prácticas.</p>
+  </section>
+
+  <section id="proyectos">
+    <h2>Proyectos</h2>
+    <div class="proyecto">
+      <h3>Detección de cartas de póker 🎴</h3>
+      <p>Proyecto con Python y MobileNetV2 para reconocer cartas sobre una mesa verde.</p>
+    </div>
+    <div class="proyecto">
+      <h3>Registro de nubes de puntos 🌀</h3>
+      <p>Procesamiento 3D con Open3D: keypoints ISS, descriptores FPFH y RANSAC.</p>
+    </div>
+  </section>
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Puedes encontrarme en:</p>
+    <ul>
+      <li>Email: <a href="mailto:alberto@example.com">alberto@example.com</a></li>
+      <li>GitHub: <a href="https://github.com/albertonoland" target="_blank">github.com/albertonoland</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 Alberto Noland Delgado</p>
+  </footer>
+</body>
 </html>
