--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>Puedes encontrarme en:</p>
     <ul>
       <li>Email: <a href="mailto:alberto@example.com">alberto@example.com</a></li>
-      <li>GitHub: <a href="https://github.com/albertonoland" target="_blank">github.com/albertonoland</a></li>
+      <li>LinkedIn: <a href="https://github.com/albertonoland" target="_blank">github.com/albertonoland</a></li>
     </ul>
   </section>
 
