--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Alberto Noland Delgado</h1>
+    <h1>Alberto Noland</h1>
     <p>Estudiante de Ingeniería Robótica 🤖</p>
     <nav>
       <a href="#sobre-mi">Sobre mí</a>
